# gtd_assistant

./: .gitignore  README.md  example.env  pyproject.toml  requirements.txt  setup.py
app/: main.py
app/actions/: gtd_actions.py  gtd_tools.py
app/agent/: gtd_agent.py
app/analysis/: spider.py
app/file_system/: obsidian_interface.py
app/search/: rag_system.py
app/ui/: chat_interface.py
gtd_assistant/: config.py  main.py
gtd_assistant/actions/: gtd_tools.py
gtd_assistant/agent/: constants.py  gtd_agent.py  memory.py  monkey_patches.py  simple_gtd_agent.py  strange_rpg.code-workspace
gtd_assistant/analysis/: spider.py
gtd_assistant/file_system/: obsidian_interface.py
gtd_assistant/search/: obsidian_reader.py  rag_system.py
gtd_assistant/ui/: chat_interface.py
tests/analysis/: test_spider.py
tests/memory/: test_memory_integration.py
