[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtd_assistant"
version = "0.1"
description = "A GTD (Getting Things Done) assistant"
authors = [{name = "Jake Mannix", email = "jake@yetanotheruseless.com"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "argilla-llama-index>=2.1.0",
    "beautifulsoup4",
    "llama-index==0.10.51",
    "llama-index-embeddings-cohere",
    "llama-index-embeddings-huggingface==0.2.2",
    "llama-index-embeddings-openai",
    "llama-index-llms-anthropic",
    "llama-index-multi-modal-llms-anthropic",
    "llama-index-postprocessor-colbert-rerank",
    "llama-index-storage-docstore-redis",
    "llama-index-storage-index-store-redis",
    "llama-index-vector-stores-qdrant",
    "llama-index-vector-stores-redis",
    "llama-index-vector-stores-vespa",
    "openai==1.35.9",
    "Pillow==10.4.0",
    "python-dotenv==1.0.1",
    "qdrant_client",
    "requests==2.32.3",
]

[project.optional-dependencies]
dev = [
    # Add your development dependencies here, for example:
    "pytest",
    "docker",
    "debugpy"
]

[tool.setuptools.packages.find]
include = ["gtd_assistant*"]
exclude = ["tests*"]

[tool.setuptools]
package-data = {"gtd_assistant" = ["py.typed"]}
